--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Nicolas Garcia     -->
     <meta charset="UTF-8">
     <title>Mockup Resources</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700">
